# sqlmesh-openlineage

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  test_integration.py
.github/workflows/: ci.yml  publish.yml
src/sqlmesh_openlineage/: __init__.py  console.py  datasets.py  emitter.py  facets.py  install.py
tests/: __init__.py  conftest.py  test_console.py  test_datasets.py  test_integration.py  test_marquez_integration.py
