[project]
name = "sqlmesh-openlineage"
version = "0.1.0"
description = "OpenLineage integration for SQLMesh - emit lineage to Marquez"
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "MIT" }
authors = [
    { name = "Sidequery", email = "hello@sidequery.com" }
]
keywords = ["sqlmesh", "openlineage", "marquez", "data-lineage", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sqlmesh>=0.100.0",
    "openlineage-python>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sidequery/sqlmesh-openlineage"
Repository = "https://github.com/sidequery/sqlmesh-openlineage"
Issues = "https://github.com/sidequery/sqlmesh-openlineage/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "requests",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlmesh_openlineage"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
strict = true
